# apptech

./: CIRCUIT_DIAGRAM.md  CMakeLists.txt  Makefile  README.md  pulse_oximeter.ino  test_circuit.ino  test_height_debouncer  test_reading_debouncer
include/: config.h  height_debouncer.h
instruments/height_meter/: height_meter.ino
instruments/height_meter/src/: height_debouncer.cpp  height_meter.cpp
instruments/height_meter/test/: test_height_debouncer.cpp
instruments/pulse_oximeter/: pulse_oximeter.ino
instruments/pulse_oximeter/include/: reading_debouncer.h
instruments/pulse_oximeter/test/: test_reading_debouncer.cpp
src/: pulse_oximeter.cpp
test/: test_reading_debouncer.cpp
